--- a/index.html
+++ b/index.html
@@ -65,13 +65,15 @@
   </script>
 </head>
 <body>
-<div class="text-muted text-center small mt-2">Emmanuel made</div>
-<div id="user-info" class="position-absolute top-0 end-0 m-3 text-end">
-  <div class="input-group input-group-sm">
-    <span class="input-group-text">👤</span>
-    <input type="text" id="usernameInput" class="form-control" placeholder="Username">
+  <div class="d-flex justify-content-between align-items-center px-4 mt-2">
+    <div class="text-muted small">Emmanuel made</div>
+    <div id="user-info">
+      <div class="input-group input-group-sm">
+        <span class="input-group-text">👤</span>
+        <input type="text" id="usernameInput" class="form-control" placeholder="Username">
+      </div>
+    </div>
   </div>
-</div>
 <!-- Authentication UI -->
 <div id="auth-ui" class="container mt-4">
   <div class="d-flex justify-content-center w-100">
