--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>UCAT Tracker</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script>
     // Function to toggle the display of the time input based on the hidden timing value
     function toggleTimeField() {
@@ -241,7 +242,6 @@
   </div>
   </div>
   <script type="module">
-    import Chart from 'https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js';
     import { initializeApp } from 'https://www.gstatic.com/firebasejs/11.6.0/firebase-app.js';
     import { getAnalytics } from 'https://www.gstatic.com/firebasejs/11.6.0/firebase-analytics.js';
     import { getAuth, onAuthStateChanged, signInWithPopup, GoogleAuthProvider } from 'https://www.gstatic.com/firebasejs/11.6.0/firebase-auth.js';
@@ -255,7 +255,7 @@
     function appendHistoryEntry(entry, id) {
       const tr = document.createElement('tr');
       tr.innerHTML = `
-        <td class="text-nowrap ps-1 pe-0">
+        <td class="text-nowrap p-0">
           ${entry.date} | ${entry.createdAt?.toDate?.() ? entry.createdAt.toDate().toLocaleTimeString() : ''}
         </td>
         <td>${entry.section}</td>
