--- a/index.html
+++ b/index.html
@@ -255,8 +255,8 @@
     function appendHistoryEntry(entry, id) {
       const tr = document.createElement('tr');
       tr.innerHTML = `
-        <td class="text-nowrap p-0">
-          ${entry.date}|${entry.createdAt?.toDate?.() ? entry.createdAt.toDate().toLocaleTimeString() : ''}
+        <td class="text-nowrap p-0" style="max-width: 200px;">
+          ${entry.date} | ${entry.createdAt?.toDate?.() ? entry.createdAt.toDate().toLocaleTimeString() : ''}
         </td>
         <td>${entry.section}</td>
         <td>${entry.timing}</td>
