--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
           </div>
         </div>
         <div class="table-responsive">
-          <table class="table table-striped">
+          <table class="table table-striped table-sm">
             <thead>
               <tr>
                 <th>Date</th>
@@ -258,7 +258,7 @@
         <td class="text-nowrap p-0" style="max-width: 200px;">
           ${entry.date} | ${entry.createdAt?.toDate?.() ? entry.createdAt.toDate().toLocaleTimeString() : ''}
         </td>
-        <td>${entry.section}</td>
+        <td class="text-center p-0">${entry.section}</td>
         <td>${entry.timing}</td>
         <td>${entry.time}</td>
         <td>${entry.score}</td>
