--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
   <title>UCAT Tracker</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    /* Remove horizontal padding on Date and Section columns */
+    table.table-sm th:nth-child(1),
+    table.table-sm td:nth-child(1),
+    table.table-sm th:nth-child(2),
+    table.table-sm td:nth-child(2) {
+      padding-left: 0 !important;
+      padding-right: 0 !important;
+    }
+  </style>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script>
     // Function to toggle the display of the time input based on the hidden timing value
@@ -178,7 +188,7 @@
           </div>
         </div>
         <div class="table-responsive">
-          <table class="table table-striped table-sm">
+          <table class="table table-striped">
             <thead>
               <tr>
                 <th>Date</th>
@@ -255,10 +265,10 @@
     function appendHistoryEntry(entry, id) {
       const tr = document.createElement('tr');
       tr.innerHTML = `
-        <td class="text-nowrap p-0" style="max-width: 200px;">
+        <td class="text-nowrap p-0">
           ${entry.date} | ${entry.createdAt?.toDate?.() ? entry.createdAt.toDate().toLocaleTimeString() : ''}
         </td>
-        <td class="text-center p-0">${entry.section}</td>
+        <td>${entry.section}</td>
         <td>${entry.timing}</td>
         <td>${entry.time}</td>
         <td>${entry.score}</td>
