--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
       padding-left: 0 !important;
       padding-right: 0 !important;
     }
+    /* Tighten all table cell padding to shift columns closer together */
+    .table td, .table th {
+      padding: 0.3rem 0.5rem !important;
+    }
   </style>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script>
@@ -188,7 +192,7 @@
           </div>
         </div>
         <div class="table-responsive">
-          <table class="table table-striped">
+          <table class="table table-striped table-sm">
             <thead>
               <tr>
                 <th>Date</th>
