--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
     .table td, .table th {
       padding: 0.3rem 0.5rem !important;
     }
+    /* Force fixed column widths */
+    .table {
+      table-layout: fixed;
+    }
   </style>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script>
@@ -193,6 +197,15 @@
         </div>
         <div class="table-responsive">
           <table class="table table-striped table-sm">
+            <colgroup>
+              <col style="width:15%;" />  <!-- Date -->
+              <col style="width:10%;" />  <!-- Section -->
+              <col style="width:10%;" />  <!-- Timing -->
+              <col style="width:10%;" />  <!-- Time -->
+              <col style="width:25%;" />  <!-- Score (progress bar) -->
+              <col style="width:20%;" />  <!-- Review -->
+              <col style="width:10%;" />  <!-- Actions -->
+            </colgroup>
             <thead>
               <tr>
                 <th>Date</th>
