--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
+    /* Use Apple’s SF Pro system font stack */
+    html, body, input, button, select, textarea {
+      font-family: -apple-system, 'SF Pro Text', 'SF Pro Display', 'Helvetica Neue', Arial, sans-serif;
+    }
     /* Remove horizontal padding on Date and Section columns */
     table.table-sm th:nth-child(1),
     table.table-sm td:nth-child(1),
