--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
     .progress {
       background-color: #E5E5E5 !important;
     }
+    /* Vertically center all columns except Date */
+    table.table-sm tbody td:not(:first-child) {
+      vertical-align: middle !important;
+    }
   </style>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script>
