--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
     table.table-sm tbody td:not(:first-child) {
       vertical-align: middle !important;
     }
+    /* Add horizontal space before Review column */
+    table.table-sm td:nth-child(6) {
+      padding-left: 1rem !important;
+    }
   </style>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script>
@@ -330,7 +334,7 @@
           </div>
         </td>
         <td>${entry.review || ''}</td>
-        <td>
+        <td class="text-center">
           <button class="btn btn-sm btn-outline-danger" onclick="deleteScore('${id}')">🗑️</button>
         </td>
       `;
