--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
           </div>
         </td>
         <td>${entry.review || ''}</td>
-        <td style="padding-left: 1rem; padding-right: 5rem; vertical-align: middle;">
+        <td style="padding-left: 1rem; padding-right: 0.5rem;">
           <button class="btn btn-sm btn-outline-danger" onclick="deleteScore('${id}')">🗑️</button>
         </td>
       `;
