--- a/index.html
+++ b/index.html
@@ -43,6 +43,16 @@
     table.table-sm td:nth-child(6) {
       padding-left: 1rem !important;
     }
+
+    /* Auto-expanding review fields */
+    .review-cell {
+      width: 100%;
+      border: none;
+      background: transparent;
+      resize: none;
+      overflow: hidden;
+      font: inherit;
+    }
   </style>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script>
@@ -249,7 +259,7 @@
 
     <!-- Section Trend Charts -->
 <div class="card mt-4">
-  <div class="card-header">Section Trends</div>
+  <div class="card-header">Progress</div>
   <div class="card-body">
     <div class="row">
       <!-- VR chart -->
@@ -294,6 +304,12 @@
     import { getAuth, onAuthStateChanged, signInWithPopup, GoogleAuthProvider } from 'https://www.gstatic.com/firebasejs/11.6.0/firebase-auth.js';
     import { getFirestore, collection, query, where, onSnapshot, addDoc, deleteDoc, doc, serverTimestamp } from 'https://www.gstatic.com/firebasejs/11.6.0/firebase-firestore.js';
 
+    // Auto-resize textarea to fit content
+    function autoResizeTextarea(ta) {
+      ta.style.height = 'auto';
+      ta.style.height = ta.scrollHeight + 'px';
+    }
+
     let chartVR, chartDM, chartQR;
     let allEntries = [];
     let scoreChart;
@@ -335,12 +351,21 @@
             </span>
           </div>
         </td>
-        <td>${entry.review || ''}</td>
+        <td>
+          <textarea class="review-cell" readonly>${entry.review || ''}</textarea>
+        </td>
         <td style="padding-left: 1rem; padding-right: 0.5rem;">
           <button class="btn btn-sm btn-outline-danger" onclick="deleteScore('${id}')">🗑️</button>
         </td>
       `;
       document.getElementById('historyBody').appendChild(tr);
+      // Auto-resize the review textarea in the history row
+      const ta = tr.querySelector('.review-cell');
+      if (ta) {
+        autoResizeTextarea(ta);
+        ta.addEventListener('focus', () => autoResizeTextarea(ta));
+        ta.addEventListener('input', () => autoResizeTextarea(ta));
+      }
     }
 
     // Firebase config
@@ -539,6 +564,14 @@
       loadScores();
       e.target.reset(); setTiming('Timed'); updateScorePercentage();
     });
+
+    // Auto-resize the form review textarea
+    const reviewFormTa = document.getElementById('review');
+    if (reviewFormTa) {
+      autoResizeTextarea(reviewFormTa);
+      reviewFormTa.addEventListener('focus', () => autoResizeTextarea(reviewFormTa));
+      reviewFormTa.addEventListener('input', () => autoResizeTextarea(reviewFormTa));
+    }
   </script>
 </div>
 </div>
