--- a/index.html
+++ b/index.html
@@ -70,13 +70,14 @@
       z-index: 1050;
     }
     .sticky-note {
-      background: #fff8a3;
+      background: #ffffff;       /* white background */
       border: 1px solid #e0db7d;
       box-shadow: 0 4px 6px rgba(0,0,0,0.1);
       padding: 1rem;
       max-width: 600px;
       max-height: 80vh;
       overflow: auto;
+      resize: both;             /* make resizable */
       position: relative;
     }
   </style>
