not limit resize

--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
       border: 1px solid #e0db7d;
       box-shadow: 0 4px 6px rgba(0,0,0,0.1);
       padding: 1rem;
-      max-width: 600px;
-      max-height: 80vh;
       overflow: auto;
-      resize: both;             /* make resizable */
+      resize: both;             /* allow resize in both directions */
       position: relative;
+      max-width: none !important;
+      max-height: none !important;
     }
   </style>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
