--- a/mocks.html
+++ b/mocks.html
@@ -159,7 +159,7 @@
   <div class="container-fluid mt-5">
     <div class="d-flex align-items-center mb-4 ms-4">
       <h1 class="mb-0">UCAT Tracker</h1>
-      <a href="mocks.html" class="btn btn-outline-primary btn-sm ms-3">Mock Tracker</a>
+      <a href="mocks.html" class="ms-3" style="font-size:0.9em; text-decoration:none;">→ Mock Tracker</a>
     </div>
     <div class="mx-auto" style="max-width:2000px; border:1px solid #ccc; padding:1rem;">
     <!-- Card for entering a new score -->
