--- a/mocks.html
+++ b/mocks.html
@@ -158,8 +158,8 @@
 <div id="tracker-ui" style="display:none;">
   <div class="container-fluid mt-5">
     <div class="d-flex align-items-center mb-4 ms-4">
-      <h1 class="mb-0">UCAT Tracker</h1>
-      <a href="mocks.html" class="ms-3" style="font-size:0.9em; text-decoration:none;">→ Mock Tracker</a>
+      <h1 class="mb-0">Mock Tracker</h1>
+      <a href="index.html" class="ms-3" style="font-size:0.9em; text-decoration:none;">→ UCAT Tracker</a>
     </div>
     <div class="mx-auto" style="max-width:2000px; border:1px solid #ccc; padding:1rem;">
     <!-- Card for entering a new score -->
