--- a/mocks.html
+++ b/mocks.html
@@ -179,6 +179,17 @@
               <label for="mockName" class="col-form-label">Mock #</label>
               <input type="text" class="form-control" id="mockName" name="mockName" placeholder="Mock name" required>
             </div>
+            <!-- Section -->
+            <div class="col-auto">
+              <label for="section" class="col-form-label">Section</label>
+              <select id="section" name="section" class="form-select" required>
+                <option value="" selected disabled>Select Section</option>
+                <option value="Full Mock">Full Mock</option>
+                <option value="VR Subtest">VR Subtest</option>
+                <option value="DM Subtest">DM Subtest</option>
+                <option value="QR Subtest">QR Subtest</option>
+              </select>
+            </div>
             <!-- Platform -->
             <div class="col-auto">
               <label for="platform" class="col-form-label">Platform</label>
@@ -236,11 +247,11 @@
             </select>
           </div>
           <div class="me-3">
-            <label for="filterTiming" class="form-label">Filter by Timing:</label>
-            <select id="filterTiming" class="form-select">
+            <label for="filterPlatform" class="form-label">Filter by Platform:</label>
+            <select id="filterPlatform" class="form-select">
               <option value="All">All</option>
-              <option value="Timed">Timed</option>
-              <option value="Untimed">Untimed</option>
+              <option value="Medentry">Medentry</option>
+              <option value="Medify">Medify</option>
             </select>
           </div>
           <div class="me-3">
@@ -251,18 +262,20 @@
         <div class="table-responsive">
           <table class="table table-sm">
             <colgroup>
-              <col style="width:7%;" />  <!-- Date -->
-              <col style="width:7%;" />  <!-- Mock # -->
-              <col style="width:7%;" />  <!-- Platform -->
-              <col style="width:5%;" />  <!-- Time -->
-              <col style="width:15%;" />  <!-- Score (progress bar) -->
-              <col style="width:20%;" />  <!-- Review -->
-              <col style="width:5%;" />  <!-- Delete -->
+            <col style="width:7%;" />  <!-- Date -->
+            <col style="width:7%;" />  <!-- Mock # -->
+            <col style="width:7%;" />  <!-- Section -->
+            <col style="width:7%;" />  <!-- Platform -->
+            <col style="width:5%;" />  <!-- Time -->
+            <col style="width:15%;" />  <!-- Score (progress bar) -->
+            <col style="width:20%;" />  <!-- Review -->
+            <col style="width:5%;" />  <!-- Delete -->
             </colgroup>
             <thead>
               <tr>
                 <th>Date</th>
                 <th>Mock #</th>
+                <th>Section</th>
                 <th>Platform</th>
                 <th>Time</th>
                 <th>Score</th>
@@ -355,6 +368,7 @@
           </small>
         </td>
         <td>${entry.mockName}</td>
+        <td>${entry.section}</td>
         <td>${entry.platform}</td>
         <td>${entry.time}</td>
         <td>
@@ -468,7 +482,7 @@
 
     // Attach filter event listeners once
     document.getElementById('filterSection').addEventListener('change', renderTable);
-    document.getElementById('filterTiming').addEventListener('change', renderTable);
+    document.getElementById('filterPlatform').addEventListener('change', renderTable);
     document.getElementById('filterVRTiming').addEventListener('change', renderTable);
     document.getElementById('filterDMTiming').addEventListener('change', renderTable);
     document.getElementById('filterQRTiming').addEventListener('change', renderTable);
@@ -478,7 +492,7 @@
     function renderTable() {
       const tbody = document.getElementById('historyBody');
       const sectionFilter = document.getElementById('filterSection').value;
-      const timingFilter  = document.getElementById('filterTiming').value;
+      const platformFilter = document.getElementById('filterPlatform').value;
       const rangeFilter = document.getElementById('filterRange').value;
       const textFilter = document.getElementById('filterText').value.trim().toLowerCase();
       let threshold = null;
@@ -494,12 +508,12 @@
       tbody.innerHTML = '';
       const filtered = allEntries.filter(({ data }) => {
         const sectionOk = (sectionFilter === 'All' || data.section === sectionFilter);
-        const timingOk  = (timingFilter  === 'All' || data.timing  === timingFilter);
+        const platformOk = (platformFilter === 'All' || data.platform === platformFilter);
         const dateOk = !threshold || (data.createdAt?.toDate?.() >= threshold);
         const combined = [data.date, data.section, data.timing, data.time, data.score, data.review || '']
           .join(' ').toLowerCase();
         const textOk = !textFilter || combined.includes(textFilter);
-        return sectionOk && timingOk && dateOk && textOk;
+        return sectionOk && platformOk && dateOk && textOk;
       });
       if (filtered.length === 0) {
         tbody.innerHTML = `<tr id="noScoresRow"><td colspan="6" class="text-center">No scores found.</td></tr>`;
@@ -588,6 +602,7 @@
       const entry = {
         date: document.getElementById('date').value,
         mockName: document.getElementById('mockName').value,
+        section: document.getElementById('section').value,
         platform: document.getElementById('platform').value,
         time: 0,
         score: document.getElementById('score').value
